--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "Force Sub Bot",
     "description": "Python based bot to Force Users to sub a channel.",
-    "logo": "",
+    "logo": "https://telegra.ph/file/7d185948340f3105b44e1.jpg",
     "keywords": [
         "telegram",
         "telethon",
